--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ziyang0621.friends" >
 
+    <permission android:name="com.ziyang0621.friends.provider.READWRITE"/>
+
+    <uses-permission android:name="com.ziyang0621.friends.provider.READWRITE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -16,6 +20,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider android:name="com.ziyang0621.friends.FriendsProvider"
+                  android:authorities="com.ziyang0621.friends.provider"
+                  android:exported="true"
+                  android:readPermission="com.ziyang0621.friends.provider.READWRITE"
+                  android:writePermission="com.ziyang0621.friends.provider.READWRITE" />
     </application>
 
 </manifest>
