--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ziyang0621.friends" >
+<manifest
+    package="com.ziyang0621.friends"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <permission android:name="com.ziyang0621.friends.provider.READWRITE"/>
 
-    <uses-permission android:name="com.ziyang0621.friends.provider.READWRITE" />
+    <uses-permission android:name="com.ziyang0621.friends.provider.READWRITE"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.WithActionBar">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <provider android:name="com.ziyang0621.friends.FriendsProvider"
-                  android:authorities="com.ziyang0621.friends.provider"
-                  android:exported="true"
-                  android:readPermission="com.ziyang0621.friends.provider.READWRITE"
-                  android:writePermission="com.ziyang0621.friends.provider.READWRITE" />
+        <activity
+            android:name=".AddActivity"
+            android:label="@string/add_friend_title"
+            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".EditActivity"
+            android:label="@string/edit_friend_title"
+            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".SearchActivity"
+            android:label="@string/search_friend_title"
+            android:parentActivityName=".MainActivity"/>
+
+        <provider
+            android:name="com.ziyang0621.friends.FriendsProvider"
+            android:authorities="com.ziyang0621.friends.provider"
+            android:exported="true"
+            android:readPermission="com.ziyang0621.friends.provider.READWRITE"
+            android:writePermission="com.ziyang0621.friends.provider.READWRITE"/>
     </application>
 
 </manifest>
